--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "better-auth": "^1.3.34",
     "classnames": "^2.5.1",
     "next": "15.5.3",
     "prisma": "^6.19.0",
