--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.19.0",
     "better-auth": "^1.3.34",
     "classnames": "^2.5.1",
+    "i18n-iso-countries": "^7.14.0",
     "next": "15.5.3",
     "prisma": "^6.19.0",
     "react": "19.1.0",
