--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
-    "better-auth": "^1.3.34",
+    "@prisma/client": "^6.19.1",
+    "better-auth": "^1.4.7",
     "classnames": "^2.5.1",
     "i18n-iso-countries": "^7.14.0",
-    "next": "15.5.3",
-    "prisma": "^6.19.0",
+    "next": "15.5.9",
+    "prisma": "^6.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sass": "^1.93.0"
@@ -26,7 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^15.5.9",
     "typescript": "^5"
   }
 }
