--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.1",
-    "better-auth": "^1.4.7",
+    "better-auth": "^1.4.9",
     "classnames": "^2.5.1",
     "i18n-iso-countries": "^7.14.0",
-    "next": "15.5.9",
+    "next": "^16.1.1",
     "prisma": "^6.19.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
